# snoopy

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  schemas.py  schemes.py  setup.py  swagger.json
config/: development.py  testing.py
migrations/: alembic.ini
migrations/versions/: 20211224__4b876ae254e0.py  20220225__c6712b7fa86b.py
snoopy/api/: __init__.py  auth.py
snoopy/auth/: __init__.py  exceptions.py  is_authenticated.py
snoopy/auth/models/: session.py  user.py
snoopy/auth/services/: forgot_password.py  forgot_password_confirm.py  sign_in.py  sign_out.py
snoopy/auth/utils/: security.py
snoopy/core/: __init__.py  application.py  exceptions.py  parser.py
snoopy/core/database/: loaddata.py  loader.py
snoopy/core/openapi/: __init__.py  command.py  merge_scheme.py
swagger/: index.html  swagger.yaml
swagger/schemas/: ErrorDTO.yaml  ForgotPasswordConfirmRequestDTO.yaml  ForgotPasswordConfirmResponseDTO.yaml  ForgotPasswordRequestDTO.yaml  ForgotPasswordResponseDTO.yaml  SignInRequestDTO.yaml  SignInResponseDTO.yaml  SignOutRequestDTO.yaml  SignOutResponseDTO.yaml
templates/: forgot-password.html
tests/: test_ping.py  test_version.py
tests/auth/: test_forgot_password.py  test_forgot_password_confirm.py  test_forgot_password_flow.py  test_sign_in.py  test_sign_out.py
tests/fixtures/auth/: test_forgot_password.yaml  test_forgot_password_confirm.yaml  test_forgot_password_confirm_with_empty_password.yaml  test_forgot_password_confirm_with_expire_token.yaml  test_sign_in_invalid_credential.yaml  test_sign_out.yaml
